Implementation of #27 (mention friends):
	- Uses new check-in flow
	- Works for both check-ins and venue searches
	- Support for multi-user mentions
	- Compatible with existing shout editing functionality
	- Allows user to search for friends by voice
	- Shows an error message if a user's friend search returns no results

* Currently does not check-in mentioned friends, (just notifies them that they have been mentioned). This is believed to be a current limitation of the Foursquare API.

--- a/code/Glasquare/src/main/res/menu/check_in.xml
+++ b/code/Glasquare/src/main/res/menu/check_in.xml
@@ -9,4 +9,8 @@
         android:id="@+id/menu_shout"
         android:icon="@drawable/ic_menu_comment"
         android:title="@string/change_shout" />
+    <item
+        android:id="@+id/menu_mention_friend"
+        android:icon="@drawable/ic_menu_friend"
+        android:title="@string/mention_friend" />
 </menu>
