--- a/code/Glasquare/src/main/res/values/styles.xml
+++ b/code/Glasquare/src/main/res/values/styles.xml
@@ -35,14 +35,17 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="TextView.Title">
+    <style name="TextView.TitlePart">
         <item name="android:layout_width">match_parent</item>
         <item name="android:paddingLeft">20dp</item>
-        <item name="android:paddingTop">20dp</item>
         <item name="android:paddingRight">20dp</item>
         <item name="android:textSize">@dimen/text_large</item>
         <item name="android:maxLines">4</item>
         <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="TextView.Title" parent="TextView.TitlePart">
+        <item name="android:paddingTop">20dp</item>
     </style>
 
     <style name="TextView.Subtitle">
