Allows users to see a venue's Specials while Exploring.

--- a/code/Glasquare/src/main/res/menu/venue.xml
+++ b/code/Glasquare/src/main/res/menu/venue.xml
@@ -9,6 +9,10 @@
         android:id="@+id/menu_tips"
         android:icon="@drawable/ic_menu_tips"
         android:title="@string/tips" />
+    <item
+        android:id="@+id/menu_specials"
+        android:icon="@drawable/ic_menu_tips"
+        android:title="Specials" />
 
     <item
         android:id="@+id/menu_check_in"
