- Show icon on venue activity if the venue has an active special. - Now displays more info on a Special's card.

--- a/code/Glasquare/src/main/res/menu/venue.xml
+++ b/code/Glasquare/src/main/res/menu/venue.xml
@@ -11,7 +11,7 @@
         android:title="@string/tips" />
     <item
         android:id="@+id/menu_specials"
-        android:icon="@drawable/ic_menu_tips"
+        android:icon="@drawable/ic_menu_special"
         android:title="Specials" />
 
     <item
