--- a/code/Glasquare/src/main/res/layout/view_special.xml
+++ b/code/Glasquare/src/main/res/layout/view_special.xml
@@ -13,5 +13,10 @@
         <TextView
             android:id="@+id/description"
             style="@style/TextView.Subtitle"/>
+
+        <TextView
+            android:id="@+id/message"
+            style="@style/TextView.Subtitle"/>
+
     </LinearLayout>
 </RelativeLayout>
