--- a/code/Glasquare/src/main/res/layout/view_venue.xml
+++ b/code/Glasquare/src/main/res/layout/view_venue.xml
@@ -16,15 +16,32 @@
 
         <TextView
             android:id="@+id/category"
-            style="@style/TextView.Subtitle"
-            />
+            style="@style/TextView.Subtitle"/>
 
         <TextView
             android:id="@+id/hours"
             style="@style/TextView.Subtitle"/>
 
-        <TextView
-            android:id="@+id/distance"
-            style="@style/TextView.Footer"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/special_icon"
+                android:visibility="gone"
+                android:layout_gravity="bottom|left"
+                android:paddingBottom="20dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/distance"
+                style="@style/TextView.Footer"/>
+
+            </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
